--- a/rag-intro/Untitled.ipynb
+++ b/rag-intro/Untitled.ipynb
@@ -1025,10 +1025,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "5426afc0-a139-4305-a8db-0433f79784b5",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "    model='gpt-4o',\n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt}]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "82e0a06a-35b5-480e-9578-c9b73f979991",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletion(id='chatcmpl-9fmYte07FPrb7Qe3Y2jnsYiNaxniV', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='To execute a command in a running docker container, you can use the `docker exec` command. Here’s how you can do it based on the CONTEXT provided:\\n\\n1. First, find the container ID of the running container by using the `docker ps` command.\\n   ```sh\\n   docker ps\\n   ```\\n\\n2. Next, use the `docker exec` command along with the `-it` flag to run your desired command inside the running container. For example, to start a bash session, you would use:\\n   ```sh\\n   docker exec -it <container-id> bash\\n   ```\\n\\nReplace `<container-id>` with the actual ID of the container you obtained from the `docker ps` command.\\n\\n(Marcos MJD)', role='assistant', function_call=None, tool_calls=None))], created=1719745147, model='gpt-4o-2024-05-13', object='chat.completion', service_tier=None, system_fingerprint='fp_d576307f90', usage=CompletionUsage(completion_tokens=154, prompt_tokens=329, total_tokens=483))"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
